--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.21.4",
+    "next": "14.2.15",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.15"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@iconify/react": "^5.0.2",
     "eslint": "^8",
     "eslint-config-next": "14.2.15"
   }
