--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "lawzoom-nextapp",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,7 +17,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "sass": "^1.81.0"
   },
   "devDependencies": {
     "@iconify/react": "^5.0.2",
