--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "lawzoom-nextapp",
   "version": "0.1.0",
   "private": true,
-
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -14,6 +13,7 @@
     "antd": "^5.21.4",
     "axios": "^1.7.7",
     "next": "14.2.15",
+    "rc-virtual-list": "^3.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-redux": "^9.1.2",
