--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.21.4",
     "axios": "^1.7.7",
+    "dayjs": "^1.11.13",
     "next": "14.2.15",
     "rc-virtual-list": "^3.16.0",
     "react": "^18",
