--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
     "antd": "^5.21.4",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "next": "14.2.15",
+    "next": "^14.2.15",
     "rc-virtual-list": "^3.16.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "sass": "^1.81.0"
