--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.3.0",
-    "antd": "^5.21.4",
+    "antd": "^5.22.7",
     "axios": "^1.7.7",
     "dayjs": "^1.11.13",
-    "next": "^14.2.15",
+    "next": "^15.1.3",
     "rc-virtual-list": "^3.16.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "sass": "^1.81.0"
   },
   "devDependencies": {
+    "@ant-design/v5-patch-for-react-19": "^1.0.3",
     "@iconify/react": "^5.0.2",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
